Consolidate to a single class